# ComfyUI-BBoxNodes

./: README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: wanvideo_WanAnimate.json
nodes/: image_nodes.py  schedule_nodes.py  utils.py
