#  Edit the following fields to match your project

[project]
name = "comfyui-bboxnodes"
description = "Bboxes (Bounding Boxes) handling and visualization"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["",]  # e.g.) ["numpy==1.18.1", ]

[project.urls]
Repository = "https://github.com/masternc80/ComfyUI-BBoxNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "masternc80"
DisplayName = "ComfyUI-BBoxNodes"
Icon = ""
